sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: ')' expected but $XMLSTART$< found.
  while ((debut< avantBlanc) && (debut <fin)){
                                       ^DutchFlagAlgo:30: error: ')' expected but '}' found.
} 
^